tests/ui/qualified/qualified-path-params-2.stderr
error[E0223]: ambiguous associated type
  --> $DIR/qualified-path-params-2.rs:18:10
   |
LL | type A = <S as Tr>::A::f<u8>;
   |          ^^^^^^^^^^^^^^^^^^^ help: use fully-qualified syntax: `<<S as Tr>::A as Trait>::f`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0223`.
